--- a/Movie_Recommender_System.ipynb
+++ b/Movie_Recommender_System.ipynb
@@ -1464,8 +1464,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "id": "22678d3e-b05c-4647-aa69-00c6e755885f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a84648e4-3507-42fb-81b2-3f3db2953ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem.porter import PorterStemmer\n",
+    "ps = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f62439d6-8d65-49ec-b734-e525e44dd4f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stem(text):\n",
+    "    y = []\n",
+    "\n",
+    "    for i in text.split():\n",
+    "        y.append(ps.stem(i))\n",
+    "\n",
+    "    return \" \".join(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "a119fc15-6db5-46f1-9a81-0e48ab663370",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mpcma\\AppData\\Local\\Temp\\ipykernel_23024\\3213734980.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  new_df['tags'] = new_df['tags'].apply(stem)\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_df['tags'] = new_df['tags'].apply(stem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "ec60b0a8-d648-4ed7-847d-00729f501904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "cv = CountVectorizer(max_features = 5000, stop_words = 'english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "693fa1b1-359c-4860-83d6-547e36f729f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectors = cv.fit_transform(new_df['tags']).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d8dba596-e144-4279-8d17-3eb53889553d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 0])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "7b1459d4-4f9e-42de-ad28-435d304097ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['000', '007', '10', ..., 'zone', 'zoo', 'zooeydeschanel'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "35ca7a74-f654-4f63-8e61-9822355452fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "cd1787d5-0e54-491b-8a28-9a7458bbd829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity = cosine_similarity(vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "bdd24191-681f-4d40-9f95-f2c9310f2907",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 0.08346223, 0.0860309 , ..., 0.04499213, 0.        ,\n",
+       "       0.        ])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similarity[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "2fbd4338-27f7-46db-a193-2147dc5c080e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend(movie):\n",
+    "    movie_index = new_df[new_df['title'] == movie].index[0]\n",
+    "    distances = similarity[movie_index]\n",
+    "    movies_list = sorted(list(enumerate(distances)), reverse = True, key = lambda x:x[1])[1:6]\n",
+    "\n",
+    "    for i in movies_list:\n",
+    "        print(new_df.iloc[i[0]].title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "36ea850f-5a0d-4487-b7ab-c248ac9e6f15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Dark Knight Rises\n",
+      "Batman Begins\n",
+      "Batman Returns\n",
+      "Batman Forever\n",
+      "Batman\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend('The Dark Knight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "e285f8a2-2db3-46ec-aaae-1924576fe2fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "2d647f73-f039-4c22-a016-4c87c38cb46c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(new_df.to_dict(), open('movie_dict.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "753f8322-d457-4ba1-983a-176abce5d8f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(similarity, open('similarity.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72a3007b-0fc7-4f37-b7ea-5470aeed761b",
    "metadata": {},
    "outputs": [],
    "source": []
